@@ -35,12 +35,10 @@
 (require 'gnus-msg)
 
 (eval-when-compile
-  (require 'cl)
-  (autoload 'vm-mode "vm")
-  (autoload 'vm-save-message "vm")
-  (autoload 'vm-forward-message "vm")
-  (autoload 'vm-reply "vm")
-  (autoload 'vm-mail "vm"))
+  (require 'cl))
+
+(autoload 'vm-mode "vm")
+(autoload 'vm-save-message "vm")
 
 (defvar gnus-vm-inhibit-window-system nil
   "Inhibit loading `win-vm' if using a window-system.
@@ -51,10 +49,8 @@ Has to be set before gnus-vm is loaded.")
     (when window-system
       (require 'win-vm))))
 
-(when (not (featurep 'vm))
-  (load "vm"))
-
 (defun gnus-vm-make-folder (&optional buffer)
+  (require 'vm)
   (let ((article (or buffer (current-buffer)))
 	(tmp-folder (generate-new-buffer " *tmp-folder*"))
 	(start (point-min))
@@ -87,6 +83,7 @@ save those articles instead."
 
 (defun gnus-summary-save-in-vm (&optional folder)
   (interactive)
+  (require 'vm)
   (setq folder
 	(gnus-read-save-file-name
 	 "Save %s in VM folder:" folder
